// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`typed section profile api client integration batch creates section profiles and snapshots get responses 1`] = `
{
  "area": {
    "unit": "SquareMeter",
    "value": 0.0049354740000000005,
  },
  "discriminator": "STANDARD",
  "id": "<db-id>",
  "name": "W12x26",
  "revisionId": "<revision-id>",
  "strongAxisElasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 0.000557160176,
  },
  "strongAxisMomentOfInertia": {
    "unit": "MeterToTheFourth",
    "value": 0.0000849112108224,
  },
  "strongAxisPlasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 0.0006292632576,
  },
  "torsionalConstant": {
    "unit": "MeterToTheFourth",
    "value": 0.0000001440160732576,
  },
  "warpingConstant": {
    "unit": "MeterToTheSixth",
    "value": 0.00000009049658702401236,
  },
  "weakAxisElasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 0.00009455335927999998,
  },
  "weakAxisMomentOfInertia": {
    "unit": "MeterToTheFourth",
    "value": 0.000007200803662880001,
  },
  "weakAxisPlasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 0.00014650035215999998,
  },
}
`;

exports[`typed section profile api client integration batch creates section profiles and snapshots get responses 2`] = `
{
  "area": {
    "unit": "SquareMeter",
    "value": 0.00334,
  },
  "discriminator": "WITH_SHEAR_AREAS",
  "id": "<db-id>",
  "name": "IPE 200",
  "revisionId": "<revision-id>",
  "strongAxisElasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 0.000194,
  },
  "strongAxisMomentOfInertia": {
    "unit": "MeterToTheFourth",
    "value": 0.0000194,
  },
  "strongAxisPlasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 0.00022,
  },
  "strongAxisShearArea": {
    "unit": "SquareMeter",
    "value": 0.00198,
  },
  "torsionalConstant": {
    "unit": "MeterToTheFourth",
    "value": 0.00000014,
  },
  "warpingConstant": {
    "unit": "MeterToTheSixth",
    "value": 0.0000000117,
  },
  "weakAxisElasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 0.0000285,
  },
  "weakAxisMomentOfInertia": {
    "unit": "MeterToTheFourth",
    "value": 0.00000142,
  },
  "weakAxisPlasticSectionModulus": {
    "unit": "CubicMeter",
    "value": 0.0000446,
  },
  "weakAxisShearArea": {
    "unit": "SquareMeter",
    "value": 0.00132,
  },
}
`;
